--- a/config/content.htm
+++ b/config/content.htm
@@ -353,7 +353,8 @@ function sysCall_sensing()
     end
 end </pre>
 <p></p><h2>逆向運動學函式</h2>
-<h2>Python remote API 逆向運動學函式</h2>
+<p>操作結果</p>
+<p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p><h2>Python remote API 逆向運動學函式</h2>
 <h1>Task</h1>
 <h2>Task1</h2>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
