--- a/content/逆向運動學函式.html
+++ b/content/逆向運動學函式.html
@@ -135,7 +135,66 @@ img.add_border {
         </header>
     <div id="tipue_search_content">手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式<br /><h1>逆向運動學函式</h1>
 <p>操作結果</p>
-<p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p><br />手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式</div>
+<p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p>
+<p>video</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/efhPJLK4QY4" width="560"></iframe></p>
+<p><span>Inverse Kinematics 方程式</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function moving(x,y)
+    a=0.4
+    b=0.4
+    c=math.pow((math.pow(x,2)+math.pow(y,2)),0.5)
+    s=(a+b+c)/2
+    area=math.pow((s*(s-a)*(s-b)*(s-c)),0.5)
+    h=area/(2*c)
+    deg1_base=math.atan(x/y)
+    if x&lt;0 and y&lt;0 then
+        deg1_base=deg1_base+math.pi
+    end
+    deg1_tri=math.asin(h/a)
+    deg1=deg1_base+deg1_tri
+    deg2=math.pi-(0.5*math.pi-deg1_tri)-math.acos(h/b)
+    deg3=deg2-deg1
+    sim.setJointTargetPosition(joint01,deg1)
+    sim.setJointTargetPosition(joint02,-deg2)
+    sim.setJointTargetPosition(joint03,deg3)
+end
+
+function sysCall_threadmain()
+    joint01=sim.getObjectHandle('joint1')
+    joint02=sim.getObjectHandle('joint2')
+    joint03=sim.getObjectHandle('joint3')
+    jointz=sim.getObjectHandle('jointz')
+    sim.setJointTargetPosition(joint01,0)
+    sim.setJointTargetPosition(joint02,0)
+    sim.setJointTargetPosition(joint03,0)
+    sim.setJointTargetPosition(jointz,0)
+    sim.setIntegerSignal("pad_switch",1)
+    sim.setJointTargetPosition(jointz,-0.085)
+    sim.wait(3)
+    sim.setJointTargetPosition(jointz,0)
+    sim.wait(3)
+    while sim.getSimulationState()~=sim.simulation_advancing_abouttostopre do
+    moving(0.2,0.7)
+    sim.wait(3)
+    sim.setIntegerSignal("pad_switch",0)
+    sim.wait(3)
+    sim.setIntegerSignal("pad_switch",1)
+    sim.setJointTargetPosition(jointz,-0.085)
+    sim.wait(3)
+    sim.setJointTargetPosition(jointz,0)
+    sim.wait(3)
+    moving(-0.3,-0.55)
+    sim.wait(3)
+    sim.setIntegerSignal("pad_switch",0)
+    sim.wait(3)
+    sim.setIntegerSignal("pad_switch",1)
+    sim.setJointTargetPosition(jointz,-0.085)
+    sim.wait(3)
+    sim.setJointTargetPosition(jointz,0)
+    sim.wait(3)
+    end
+end</pre>
+<p></p><br />手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式</div>
         
     <!-- footer -->
       <div class="container">
